--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <header>
     <nav>
-      <img src="/images/hamburger.png" alt="Menu">
+      <img src="./images/hamburger.png" alt="Menu">
       <h2> flavo </h2>
-      <img src="/images/cart.png" alt="Cart">
+      <img src="./images/cart.png" alt="Cart">
     </nav>
   </header>
   <main>
     <section class="product-flavo">
-      <img src="/images/cosiness.png" alt="Flavo Cosiness">
+      <img src="./images/cosiness.png" alt="Flavo Cosiness">
     </section>
     <div class="product-price">
       <h1> Cosiness </h1>
